Fixed position of wallSelector on Firefox

--- a/css/base.css
+++ b/css/base.css
@@ -450,6 +450,7 @@ footer a {
   top:50%;
   left:50%;
   -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   width: 40%;
   height: 20%;
   background-color:  #54606e;
@@ -469,6 +470,7 @@ footer a {
   top:50%;
   left:50%;
   -webkit-transform: translate(-205%, -50%);
+  transform: translate(-205%, -50%);
   width: 60px;
   height: 60px;
   background-color: #21b9b0;
